--- a/Artifact01.html
+++ b/Artifact01.html
@@ -117,3 +117,4 @@ Ph: +555 222 333<br>
 Fax: +555 222 334<br>
 Email: izabelam@artofmarketing.com
 <p><a href="http://validator.w3.org/check?uri=referer" target="_blank"><img src="https://www.w3.org/html/logo/badge/html5-badge-h-css3-semantics.png" width="165" height="64" alt="HTML5" title="HTML5"></a></p>
+<button type="button">Go Back to Menu</button>
